force-app/main/default/objects/Animals__c/Animals__c.object-meta.xml
<CustomObject>
    <label>Animal</label>
    <nameField>
        <label>Animals Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Animals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>