force-app/main/default/objects/Animals__c/fields/age_alive__c.field-meta.xml
<CustomField>
    <fullName>age_alive__c</fullName>
    <label>age alive</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>