force-app/main/default/objects/Animals__c/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>