force-app/main/default/objects/Animals__c/fields/feeding__c.field-meta.xml
<CustomField>
    <fullName>feeding__c</fullName>
    <label>feeding</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Carnivoro</fullName>
            </value>
            <value>
                <fullName>Hervivoro</fullName>
            </value>
            <value>
                <fullName>Onnivoro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>