force-app/main/default/objects/Animals__c/fields/reproduction__c.field-meta.xml
<CustomField>
    <fullName>reproduction__c</fullName>
    <label>reproduction</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>oviparous</fullName>
            </value>
            <value>
                <fullName>viviparous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>